kubernetes/spring/spring-svc.yaml
apiVersion: v1 
kind: Service
metadata:
  name: spring
  spec:
    app: spring
    ports:
      - port: 80
        targetPort: 8080
