kubernetes/spring/spring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific #TODO: maybe modify
        backend:
          service:
            name: spring
            port:
              number: spring
